added addEventListener in js for button click

--- a/split-the-bil.html
+++ b/split-the-bil.html
@@ -22,14 +22,7 @@
             <input type="number" name="tip" id="tip" />
           </div>
         </div>
-        <button
-          class="calculate"
-          onclick="
-        calculate();
-        "
-        >
-          BERÄKNA
-        </button>
+        <button class="calculate">BERÄKNA</button>
       </div>
       <div class="bill-per-person person">
         <h2>Splitta Notan</h2>
